bizinikiwi/pezframe/support/test/tests/pezpallet_ui/event_wrong_item_name.stderr
error: expected `Event`
  --> tests/pezpallet_ui/event_wrong_item_name.rs:36:11
   |
36 |     pub enum Foo {}
   |              ^^^
